// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Number basic 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}"
`;

exports[`Integer basic 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}"
`;

exports[`Nullable nullable: true 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value) {
    if (value === null) {
        return value;
    }
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}"
`;

exports[`String with enum 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value) {
    if (value !== 'a' && value !== 'b' && value !== 'c') {
        return new ValidationError(path, 'Expected one of the enum value');
    }
    return value;
}"
`;

exports[`Objects with a required prop 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value) {
    if (!(typeof value === 'string')) {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value) {
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
    } else {
        return new ValidationError(path, 'Expected "foo" to be defined');
    }
    const value1 = value['bar'];
    if (value1 !== undefined) {
        const result1 = obj2([
            ...path,
            'bar'
        ], value1);
        if (result1 instanceof ValidationError) {
            return result1;
        }
        value['bar'] = result1;
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}"
`;

exports[`Objects with a default value 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj0(path, value) {
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
    } else {
        value['foo'] = 10;
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}"
`;

exports[`Objects as free form object 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value) {
    const keys = new Set(Object.keys(value));
    return value;
}"
`;

exports[`Objects with additionalProperties: true 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj0(path, value) {
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
        keys.delete('foo');
    } else {
        value['foo'] = 10;
    }
    return value;
}"
`;

exports[`Objects with additionalProperties: {} 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value) {
    if (!(typeof value === 'string')) {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value) {
    const keys = new Set(Object.keys(value));
    const value0 = value['foo'];
    if (value0 !== undefined) {
        const result0 = obj1([
            ...path,
            'foo'
        ], value0);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['foo'] = result0;
        keys.delete('foo');
    } else {
        value['foo'] = 10;
    }
    for (const key of keys) {
        const result = obj2([
            ...path,
            key
        ], value[key]);
        if (result instanceof ValidationError) {
            return result;
        }
        value[key] = result;
    }
    return value;
}"
`;

exports[`Objects with minProperties/maxProperties 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj0(path, value) {
    const keys = new Set(Object.keys(value));
    if (keys.size < 1) {
        return new ValidationError(path, 'Expected at least 1 properties');
    }
    if (keys.size > 10) {
        return new ValidationError(path, 'Expected at most 10 properties');
    }
    return value;
}"
`;

exports[`anyOf 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value) {
    if (!(typeof value === 'string')) {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value) {
    const value0 = obj1(path, value);
    if (!(value0 instanceof ValidationError)) {
        return value0;
    }
    const value1 = obj2(path, value);
    if (!(value1 instanceof ValidationError)) {
        return value1;
    }
    return new ValidationError(path, 'Expected one of the anyOf schemas to match');
}"
`;

exports[`oneOf 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj1(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj2(path, value) {
    if (!(typeof value === 'string')) {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj0(path, value) {
    let result;
    const alt0 = obj1(path, value);
    if (!(alt0 instanceof ValidationError)) {
        result = alt0;
    }
    const alt1 = obj2(path, value);
    if (!(alt1 instanceof ValidationError)) {
        result = alt1;
        if (result !== undefined) {
            return new ValidationError(path, 'Expected to only match one of the schemas');
        }
    }
    return result;
}"
`;

exports[`allOf 1`] = `
"class ValidationError {
    constructor(path, message) {
        super(message);
        this.path = path;
    }
}
function obj2(path, value) {
    if (!(typeof value === 'number')) {
        return new ValidationError(path, 'Expected a number');
    }
    return value;
}
function obj1(path, value) {
    const keys = new Set(Object.keys(value));
    const value0 = value['a'];
    if (value0 !== undefined) {
        const result0 = obj2([
            ...path,
            'a'
        ], value0);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['a'] = result0;
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}
function obj4(path, value) {
    if (!(typeof value === 'string')) {
        return new ValidationError(path, 'Expected a string');
    }
    return value;
}
function obj3(path, value) {
    const keys = new Set(Object.keys(value));
    const value0 = value['b'];
    if (value0 !== undefined) {
        const result0 = obj4([
            ...path,
            'b'
        ], value0);
        if (result0 instanceof ValidationError) {
            return result0;
        }
        value['b'] = result0;
    }
    if (keys.size > 0) {
        return new ValidationError(path, 'Unexpected properties');
    }
    return value;
}
function obj0(path, value) {
    let result = value;
    result = obj1(path, result);
    if (result instanceof ValidationError) {
        return result;
    }
    result = obj3(path, result);
    if (result instanceof ValidationError) {
        return result;
    }
    return result;
}"
`;
